v0.77.0.7:
	- Added temporary support for Beta 1.9 builds.
v0.77.1.0:
	- Release.
v0.77.1.1:
	- Fix for PEX world based prefix/suffix.
	- Moved resident purging to it's own thread.
	- Towny will now remove any unused resident/town/nation files after it performs it's backup.
v0.77.1.2:
	- Fixed reading/saving of coma delimited lists (eg switch_ids).
	  These can now be set to be empty, so long as you edit it to read (switch_ids: '').
	- Town block notifications will now correctly reflect the worlds Forced PVP status.
v0.77.1.3:
	- Fixed revert_on_unclaim.block_ignore. It wasn't being written to the config so was being ignored.
	- Players joining with spaces in their names (hacked clients) will no longer kill Towny.
	- Prevent locked files causing a corrupt backup.
v0.77.1.4:
	- Fixed TownyWorld commands to only be available for admins or at console.
	- Fixed '/plot set perm reset' and '/town set perm reset'.
	- Added a permission node 'towny.town.plottype' (User is able to alter plot types on plots they own).
	- Fixed Nation command to correctly check 'towny.nation.grant-titles' instead of towny.nation.titles'.
	- Added daily upkeep to the '/town' and '/nation' outputs.
v0.77.1.5:
	- Active players now checks if a player is online, rather than only their last logged on time.
	- Towny backup now correctly shuts down the loggers before backing up (no more corrupt/locked files).
	- Towny now correctly removes economy accounts upon deletion of the resident/town/nation, instead of setting it to zero.
	- Added auto modes for chat.
	  Type '/tc' to set town chat mode. All text typed from then on will be sent to town chat.
	  While in a chat mode you can still talk in other channels by using the channel commands eg. '/nc hi'.
	  While in a chat mode you can talk in global chat with '/g text here'.
	  to clear all chat modes '/g'.
	- Added a new permission node for global chat ('/g') of 'towny.chat.global'.